# MolBench

./: .env.example  .gitignore  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/molviewstories/: SOURCE.md  story-alphafind-00.json  story-alphafind-01.json  story-alphafind-02.json  story-alphafind-03.json  story-alphafind-04.json  story-alphafind-05.json  story-alphafind-06.json  story-alphafind-07.json  story-kinase-00.json  story-kinase-01.json  story-kinase-02.json  story-kinase-03.json  story-kinase-04.json  story-kinase-05.json  story-kinase-06.json  story-kinase-07.json  story-kinase-08.json  story-kinase-09.json  story-kinase-10.json  story-mvs-examples-00.json  story-mvs-examples-01.json  story-mvs-examples-02.json  story-mvs-examples-03.json  story-mvs-examples-04.json  story-mvs-examples-05.json  story-mvs-examples-06.json  story-simple-00.json  story-simple-01.json  story-tbp-00.json  story-tbp-01.json  story-tbp-02.json  (+7 more)
docs/: escalation_data.json  gallery_data.json  index.html  scorecard.json
molbench/: __init__.py  adapter.py  api_reference.md  escalate.py  grader.py  grounding.py  models.py  mvs.py  mvs_reference.md  render.py  runner.py  schema.py  sifts.py  variants.py  visual.py  vlm_grader.py
paper/: methods.md  venues.md
prompts/: system_api.md  system_mvs.md
results/: scorecard.json
scripts/: author_mvs_tasks.py  build_leaderboard.py  fetch_molstar.py  generate_clinical_tasks.py  generate_grounded_tasks.py  generate_mvs_tasks.py  ingest_molviewstories.py  inspect_run.py  merge_scorecards.py
tests/: test_harness.py
(+91 files in other folders)
