[project]
name = "molbench"
version = "0.1.0"
description = "A molecular-visualization benchmark and harness for LLM-based assistants (Mol*/ipymolstar API calling + visual-rubric tasks)."
readme = "README.md"
requires-python = ">=3.10"
# The harness core (schema, grader, runner, baseline model) runs on the stdlib alone,
# so the benchmark is usable with zero install. Extras are only needed for live models
# or for actually executing/rendering structures.
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.0"]
# 'authoring' builds MVS reference scenes (scripts/author_mvs_tasks.py), grounds
# Tier-2 tasks in real structures (gemmi), and enables deep MVS schema validation.
authoring = ["molviewspec>=1.8", "gemmi>=0.6"]
# 'execute' pulls in the real viewer so reference answers can be run/rendered headlessly.
execute = ["ipymolstar>=0.0.9", "molviewspec>=1.8", "anywidget", "playwright"]
all = ["anthropic>=0.40", "openai>=1.0", "molviewspec>=1.8", "ipymolstar>=0.0.9", "anywidget"]

[project.scripts]
molbench = "molbench.runner:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["molbench"]
